@@ -1,5 +1,7 @@
 *SVN*
 
+* Added support for ~/.caprc, also -x and -c switches.
+
 * Updated migrate action to use db:migrate task in Rails instead of the deprecated migrate task [DHH]
 
 * Allow SSH user and port to be encoded in the hostname strings [Ezra Zygmuntowicz]
